--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -1,5 +1,9 @@
 <template name="pool">
 	{{> mainHeader }}
+	<div class="paging">
+		<span class="previous">previous</span> | 
+		<span class="next">next</span>
+	</div>
 	<div class="container">
 		{{#each showPix}}
 
