--- a/client/style.less
+++ b/client/style.less
@@ -19,7 +19,7 @@ body {
 	height: 100%;
 }
 
-.editor {
+.loggedInBar {
 	color: @editorColor;
 	background-color: @editorBack;
 	border-bottom: @editorBorder;
@@ -241,6 +241,30 @@ body {
 	}
 }
 
+.superSprite {
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	position: fixed;
+	z-index: 10;
+	-webkitflex-grow: 1;
+	flex-grow: 1;
+	
+	display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;					/* TWEENER - IE 10 */
+	display: -webkit-flex;				/* NEW - Chrome */
+	display: flex;								/* NEW, Spec - Opera 12.1, Firefox 20+ */
+	
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-flex-direction: column;
+	flex-direction: column;
+}
+
 .docMeta {
 	padding: 12px;
 	bottom: 0px;
@@ -270,8 +294,10 @@ body {
 
 .eboycopyright {
 	position: fixed;
+	top: 0px;
 	right: 0px;
 	padding: 0 2px;
+	z-index: 15;
 }
 
 .spriteBoxInfoToggle {
@@ -281,10 +307,14 @@ body {
 	padding: 4px 8px;
 }
 
-ol {
+.metadata {
 	background-color: #171714;
+}
+
+ol {
 	margin: 0;
 	padding: 0em 0em;
+	padding: 12px;
 }
 
 ol li {
