--- a/client/templates/mainLayout.html
+++ b/client/templates/mainLayout.html
@@ -1,6 +1,6 @@
 <Template name='mainLayout'>
 	{{#if currentUser.profile.isEditor}}
-		<div class="editor">
+		<div class="loggedInBar">
 			<a href="{{ pathFor 'pool' slug='all' page='1' }}">home</a> | 
 			<a href="{{ pathFor 'addDoc' }}">add</a> |
 			<a href="{{ pathFor 'login' }}">{{ currentUser.profile.name }}</a> 
