--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -45,32 +45,29 @@
 		</div>
 		<div class="docMeta" id="spriteBoxInfo" style="display: {{ visibility }}">
 			<div class="spriteBoxInfoToggle">X</div>
-			<ol class="metadata">
+			<ol>
 				<li><span class="property">id</span>: {{ sprite._id }}</li>
 				<li><span class="property">name</span>: {{ sprite.name }}</li>
 				<li><span class="property">date-added</span>: {{sprite.uploadedAt}}</li>
 				<li><span class="property">width</span>: {{sprite.metadata.width}}</li>
 				<li><span class="property">height</span>: {{sprite.metadata.height}}</li>
 				<li><span class="property">copyright</span>: {{sprite.metadata.copyright}}</li>
-				<li>
-					<span class="property">metadata.tags</span>: 
-					{{#each sprite.metadata.tags}}
-						<span class="tag">{{this}}</span>
-					{{/each}}
-				</li>
+				<li><span class="property">tags</span>: {{sprite.metadata.tags}}</li>
 				<li><span class="property">background-color</span>: {{ sprite.metadata.backColor }}</li>
-				{{#if currentUser.profile.isEditor}}
-						<li><span class="property">boxsize</span>: {{ boxsize }}</li>
-						<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}	</li>
-						<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height 	}}</li>
-						<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
-						<li><span class="property">window-devicePixelRatio</span>: {{ 	devicePixelRatio }} </li>
-						<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
-						<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
-						<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}x</li>
-						<li><span class="property">download</span>: <a id="genImg" href="" target="	_blank">PNG</a></li>
-				{{/if}}
 			</ol>
+			{{#if currentUser.profile.isEditor}}
+				<ol>
+					<li><span class="property">boxsize</span>: {{ boxsize }}</li>
+					<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}	</li>
+					<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height 	}}</li>
+					<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
+					<li><span class="property">window-devicePixelRatio</span>: {{ 	devicePixelRatio }} </li>
+					<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
+					<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
+					<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}x</li>
+					<li><span class="property">download</span>: <a id="genImg" href="" target="	_blank">PNG</a></li>
+				</ol>
+			{{/if}}
 		</div>
 	</div>
 </html>
