--- a/client/templates/addDoc.html
+++ b/client/templates/addDoc.html
@@ -1,3 +1,8 @@
 <template name="addDoc">
-	{{> addDocument}}
+	<div class="addDoc">
+		<div class="fileUpload btn btn-primary">
+			<span>Upload</span>
+			<input type="file" class="myPixInput">
+		</div>
+	</div>
 </template>
