--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -34,7 +34,7 @@
 
 			<div class="docbox" style="background-color: {{ backColor }}">
 				{{#if currentUser.profile.isEditor}}
-					<div class="docinfo"><span class='remove'>X</span>
+					<div class="docinfo"><span class='remove'>(×)</span>_
 						<a href="{{ pathFor 'docEdit' }}">
 							{{ this.metadata.backColor }} {{ this.metadata.width }}w {{ scaledSprite.scaleFactor }}x
 						</a>
