--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -43,7 +43,7 @@
 			<li>
 				<span class="property">metadata.tags</span>: 
 				{{#each this.metadata.tags}}
-					<span class="tag">{{this}}<span class="remove">(X)</span></span>
+					<span class="tag">{{this}}<span class="remove">(×)</span></span>
 				{{/each}}
 			</li>
 		</ol>
