--- a/client/templates/addDoc.html
+++ b/client/templates/addDoc.html
@@ -1,7 +1,7 @@
 <template name="addDoc">
 	<div class="addDoc">
 		<div class="fileUpload btn btn-primary">
-			<span>Upload</span>
+			<span>upload</span>
 			<input type="file" class="myPixInput">
 		</div>
 	</div>
