--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -49,21 +49,23 @@
 				<li><span class="property">id</span>: {{ sprite._id }}</li>
 				<li><span class="property">name</span>: {{ sprite.name }}</li>
 				<li><span class="property">date-added</span>: {{sprite.uploadedAt}}</li>
-				<li><span class="property">width</span>: {{sprite.metadata.width}}</li>
-				<li><span class="property">height</span>: {{sprite.metadata.height}}</li>
+				<li><span class="property">width</span>: {{sprite.metadata.width}}<span class="unit">px</span></li>
+				<li><span class="property">height</span>: {{sprite.metadata.height}}<span class="unit">px</span></li>
 				<li><span class="property">copyright</span>: {{sprite.metadata.copyright}}</li>
 				<li><span class="property">tags</span>: {{sprite.metadata.tags}}</li>
 				<li><span class="property">background-color</span>: {{ sprite.metadata.backColor }}</li>
 				{{#if currentUser.profile.isEditor}}
-					<li><span class="property">boxsize</span>: {{ boxsize }}</li>
-					<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}	</li>
-					<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height 	}}</li>
+					<li><span class="property">boxsize</span>: {{ boxsize }}<span class="unit">px</span></li>
+					<li><span class="property">scaledSprite-width</span>: {{ scaledSprite.width }}<span class="unit">px</span></li>
+					<li><span class="property">scaledSprite-height</span>: {{ scaledSprite.height	}}<span class="unit">px</span></li>
 					<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
-					<li><span class="property">window-devicePixelRatio</span>: {{ 	devicePixelRatio }} </li>
-					<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
-					<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
+					<li><span class="property">window-devicePixelRatio</span>: {{ devicePixelRatio }} </li>
+					<li><span class="property">scaledSprite-widthDevice</span>: {{ scaledSprite.widthDevice }}<span class="unit">px</span></li>
+					<li><span class="property">scaledSprite-heightDevice</span>: {{ scaledSprite.heightDevice }}<span class="unit">px</span></li>
 					<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}x</li>
 					<li><span class="property">download</span>: <a id="genImg" href="" target="	_blank">PNG</a></li>
+					<li><span class="property">uploadedBy.id</span>: {{sprite.metadata.uploadedBy.id}}</li>
+					<li><span class="property">uploadedBy.username</span>: {{sprite.metadata.uploadedBy.username}}</li>
 				{{/if}}
 			</ol>
 		</div>
