Set name globally on environment.js

--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -1,7 +1,7 @@
 <template name="mainHeader">
 	<div class="header">
 		<span class="headline">
-			<a href="{{ pathFor route='pool' page=1 slug='all' }}" class="dblogo">eboydb</a>
+			<a href="{{ pathFor route='pool' page=1 slug='all' }}" class="dblogo">{{ name }}</a>
 		</span>
 		{{> searchPool}}
 	</div>
