--- a/client/templates/logIn.html
+++ b/client/templates/logIn.html
@@ -5,6 +5,7 @@
 			<div class="docMeta">
 				<ol>
 					<li><span class="property">_id</span>: {{ currentUser._id }}</li>
+					<li><span class="property">username</span>: {{ currentUser.username }}</li>
 					<li><span class="property">profile.name</span>: {{ currentUser.profile.name }}</li>
 					<li><span class="property">profile.isAdmin</span>: {{ currentUser.profile.isAdmin }}</li>
 					<li><span class="property">profile.isEditor</span>: {{ currentUser.profile.isEditor }}</li>
