Tags displayed comma separated, css tweaks

--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -22,8 +22,8 @@
 
 <template name="pagingHeader">
 	<div class="paging">
-		<span class="previous">previous</span> | 
-		<span class="next">next</span>
+		<a class="previous">previous</a> | 
+		<a class="next">next</a>
 		<span class="pagestats"> /_
 			(docs: {{ postsCount }}, pages:{{ currentPage }}/{{ totalPages }})
 		</span>
