--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -52,7 +52,12 @@
 				<li><span class="property">width</span>: {{sprite.metadata.width}}<span class="unit">px</span></li>
 				<li><span class="property">height</span>: {{sprite.metadata.height}}<span class="unit">px</span></li>
 				<li><span class="property">copyright</span>: {{sprite.metadata.copyright}}</li>
-				<li><span class="property">tags</span>: {{sprite.metadata.tags}}</li>
+				<li>
+				<span class="property">metadata.tags</span>: 
+					{{#each sprite.metadata.tags}}
+						<span class="tag">{{ this }}</span>
+					{{/each}}
+				</li>
 				<li><span class="property">background-color</span>: {{ sprite.metadata.backColor }}</li>
 				{{#if currentUser.profile.isEditor}}
 					<li><span class="property">boxsize</span>: {{ boxsize }}<span class="unit">px</span></li>
