--- a/client/style.less
+++ b/client/style.less
@@ -1,11 +1,13 @@
 @thumbnailDim: 216px;
 @linkColor: DodgerBlue;
+@highlight: #ffbd4a;
 @almostBlack: #272822;
 @editorColor: #aaaaaa; //#c1c7c7
-@editorBackColor: #272822; //#eaeaea;
+@editorBackColor: @almostBlack; //#eaeaea;
 @editorBorderColor: 1px solid #333326;
 @editorHighlight: #D39322;
 @unitColor: #E42669;
+
 
 html {
 	height: 100%;
@@ -57,19 +59,25 @@ body {
 	a {
 		text-decoration: none;
 		color: @almostBlack;
-		:visited {
-			color: red;
-		}
-		:hover {
-			color: orange;
-		}
 	}
-
 	.headline{
 		font-family: inherit;
 		font-size: inherit;
 		-webkit-flex-grow: 1;
 		flex-grow: 1;
+		.dblogo:hover {
+			color: @almostBlack;
+			background-color: @highlight;
+			padding: 0 6px;
+			margin: 0 -6px;
+		}
+		.dblogo:active {
+			color: @highlight;
+			background-color: @almostBlack;
+		}
+		.dblogo:visited {
+			color: @almostBlack;
+		}
 	}
 	.search {
 		padding: 0px;
@@ -88,6 +96,7 @@ body {
 	}
 }
 
+.fourOhFour,
 .addDoc {
 	display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
 	display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
@@ -104,6 +113,11 @@ body {
 	background-color: @editorBackColor;
 	width: 100%;
 	height: 100vh;
+
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
 
 	.fileUpload {
 		position: relative;
@@ -124,12 +138,12 @@ body {
 		}
 	}
 
-	.fileUpload:hover {
+	:hover {
 		color: @editorBackColor;
 		background-color: @editorColor;
 	}
 
-	.fileUpload:active {
+	:active {
 		color: @editorBackColor;
 		background-color: @editorHighlight;
 		border-color: @editorHighlight;
@@ -301,12 +315,23 @@ body {
 		margin: 0;
 		padding: 12px 12px 18px 12px;
 		li {
-		list-style-type: none;
+			list-style-type: none;
+		}
+		.tag:after {
+			content: ','
+		}
+		.tag:last-of-type:after {
+			content:''
 		}
 	}
 	.remove {
-		padding: 0px 2px;
-		margin-left: 2px;
+		padding: 0px;
+		opacity: 0.4;
+	}
+	.remove:hover {
+		color: @editorHighlight;
+		opacity: 1;
+		cursor: pointer;
 	}
 	a {
 		color: #aaa;
@@ -343,11 +368,13 @@ body {
 }
 
 .previous:hover, .next:hover {
-	color: white;
-	background-color: blue;
+	color: @editorBackColor;
+	background-color: @highlight; //#c1c7c7
+	padding: 3px 6px;
+	margin: -3px -6px;
 }
 
 .previous:active, .next:active {
-	color: white;
-	background-color: black;
+	color: @highlight;
+	background-color: @editorBackColor;
 }
