Edit user account access as admin

--- a/client/style.less
+++ b/client/style.less
@@ -8,7 +8,6 @@
 @editorHighlight: #D39322;
 @unitColor: #E42669;
 
-
 html {
 	height: 100%;
 }
@@ -350,6 +349,10 @@ body {
 			color: inherit;
 			background-color: inherit;
 		}
+	}
+	input[type=checkbox] {
+		margin: 0px;
+		color: red;
 	}
 }
 
