Optional search focus to tag or name
new: search in tags by starting your search with “t.”
new: search in names by starting your search with “n.”
new: changed SpriteBox canvas background to transparent

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -5,7 +5,8 @@
 		myImage.onload = function() {
 			var c = document.getElementById("myCanvas");
 			var ctx = c.getContext("2d");
-			ctx.fillStyle = "{{ backColor }}";
+			// ctx.fillStyle = "{{ backColor }}";
+			ctx.fillStyle = "rgba(0, 0, 0, 0.0)";;
 			ctx.fillRect(0, 0, {{ scaledSprite.widthDevice }}, {{ scaledSprite.heightDevice }});
 			ctx.mozImageSmoothingEnabled = false;
 			ctx.webkitImageSmoothingEnabled = false;
