--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -18,12 +18,10 @@
 
 <template name="pagingHeader">
 	<div class="paging">
-		<span>
-			<a class="previous" onclick="">previous</a> | 
-			<a class="next" onclick="">next</a>
-		</span>
-		<span class="pagestats"> 
-			p.{{ currentPage }}/{{ totalPages }} c.{{ postsCount }}
+		<a class="previous" onclick="">previous</a> | 
+		<a class="next" onclick="">next</a>
+		<span class="pagestats"> /_
+			(docs: {{ postsCount }}, pages:{{ currentPage }}/{{ totalPages }})
 		</span>
 	</div>
 </template>
