--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -36,7 +36,7 @@
 		}
 	</script>
 	<div class="eboycopyright" style="color:{{ inverseBackColor }}">©eBoy</div>
-	<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}" onclick="">^</div>
+	<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
 	<div class="contentbackground" style="background-color: {{ backColor }}">
 		<div class="spriteBoxImage">
 			<div>
@@ -50,7 +50,7 @@
 			
 		</div>
 		<div class="docMeta" id="spriteBoxInfo" style="display: {{ visibility }}">
-			<div class="spriteBoxInfoToggle" onclick="">X</div>
+			<div class="spriteBoxInfoToggle">X</div>
 			<ol>
 				<li><span class="property">id</span>: {{ sprite._id }}</li>
 				<li><span class="property">name</span>: {{ sprite.name }}</li>
