--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="docMeta">
 		<div class="editMeta">
-			<div>add:
+			<div><span class="property">add</span>:
 				<input
 					type="text"
 					name="tags"
@@ -21,7 +21,7 @@
 					size="21"
 				>
 			</div>
-			<div>edit:
+			<div><span class="property">background</span>:
 				<input
 					type="text"
 					name="backColor"
@@ -29,6 +29,16 @@
 					class="editBackColor"
 					maxlength="24"
 					size="20"
+				>
+			</div>
+			<div><span class="property">license</span>:
+				<input
+					type="text"
+					name="license"
+					value="{{ this.metadata.license }}"
+					class="editLicense"
+					maxlength="24"
+					size="17"
 				>
 			</div>
 		</div>
@@ -39,6 +49,7 @@
 			<li><span class="property">metadata.width</span>: {{this.metadata.width}}<span class="unit">px</span></li>
 			<li><span class="property">metadata.height</span>: {{this.metadata.height}}<span class="unit">px</span></li>
 			<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
+			<li><span class="property">metadata.license</span>: {{this.metadata.license}}</li>
 			<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
 			<li>
 				<span class="property">metadata.tags</span>: 
