display size of image

--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -48,6 +48,7 @@
 			<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
 			<li><span class="property">metadata.width</span>: {{this.metadata.width}}<span class="unit">px</span></li>
 			<li><span class="property">metadata.height</span>: {{this.metadata.height}}<span class="unit">px</span></li>
+			<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{sizeFormatted.unit}}</span></li>
 			<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
 			<li><span class="property">metadata.license</span>: {{this.metadata.license}}</li>
 			<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
