--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -57,6 +57,7 @@
 				<li><span class="property">date</span>: {{ formatDate }}</li>
 				<li><span class="property">width</span>: {{sprite.metadata.width}}<span class="unit">px</span></li>
 				<li><span class="property">height</span>: {{sprite.metadata.height}}<span class="unit">px</span></li>
+				<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{sizeFormatted.unit}}</span></li>
 				<li>
 				<li><span class="property">copyright</span>: {{sprite.metadata.copyright}}</li>
 				<li><span class="property">license</span>: {{sprite.metadata.license}}</li>
