--- a/client/style.less
+++ b/client/style.less
@@ -22,6 +22,14 @@ body {
 	height: 100%;
 }
 
+img {
+	image-rendering: -moz-crisp-edges;
+	image-rendering: -o-crisp-edges;
+	image-rendering: -webkit-optimize-contrast;
+	-ms-interpolation-mode: nearest-neighbor;
+	image-rendering: pixelated;
+}
+
 .editor {
 	color: @editorColor;
 	background-color: @editorBackColor;
