improved search for tags and name
prefix “t:” searches tags
prefix “n:” searches in names

--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -11,7 +11,7 @@
 <template name="searchPool">
 	<span class="search">
 		<form class="seachDbForm">
-			<input type="text" onclick="this.focus(); this.setSelectionRange(0, 9999);" name="searchDB" value="{{ slug }}" class="searchFor" maxlength="24" size="9">
+			<input type="text" onclick="this.focus(); this.setSelectionRange(0, 9999);" name="searchDB" value="{{ filter }}" class="searchFor" maxlength="24" size="12">
 		</form>
 	</span>
 </template>
