Small color edit, cleaning up

--- a/client/style.less
+++ b/client/style.less
@@ -2,7 +2,7 @@
 @linkColor: DodgerBlue;
 @highlight: #ffbd4a;
 @almostBlack: #272822;
-@editorColor: #aaaaaa; //#c1c7c7
+@editorColor: #aeaea4; //#c1c7c7 #aaaaaa
 @editorBackColor: @almostBlack; //#eaeaea;
 @editorBorderColor: 1px solid #333326;
 @editorHighlight: #D39322;
@@ -82,7 +82,7 @@ img {
 		align-self: flex-end;
 		input[type=text]{
 			height: 1.2em;
-			color: @almostBlack;
+			color: @editorColor;
 			font-weight: bold;
 			font-family: inherit;
 			font-size: inherit;
@@ -275,7 +275,7 @@ img {
 		
 		-webkit-justify-content: center;
 		justify-content: center;
-		
+
 		-webkit-align-items: center;
 		align-items: center;
 	}
